--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,18 @@
           <version>1.2</version>
       </dependency>
 
+      <!-- https://mvnrepository.com/artifact/javax.ejb/ejb-api -->
+      <dependency>
+          <groupId>javax.ejb</groupId>
+          <artifactId>ejb-api</artifactId>
+          <version>3.0</version>
+      </dependency>
+
+      <dependency>
+          <groupId>javax</groupId>
+          <artifactId>javaee-web-api</artifactId>
+          <version>7.0</version>
+      </dependency>
 
 
   </dependencies>
