--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,27 @@
           <version>7.0</version>
       </dependency>
 
+      <!-- https://mvnrepository.com/artifact/org.apache.derby/derby -->
+      <dependency>
+          <groupId>org.apache.derby</groupId>
+          <artifactId>derby</artifactId>
+          <version>10.13.1.1</version>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/org.apache.derby/derbyclient -->
+      <dependency>
+          <groupId>org.apache.derby</groupId>
+          <artifactId>derbyclient</artifactId>
+          <version>10.13.1.1</version>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/org.eclipse.persistence/eclipselink -->
+      <dependency>
+          <groupId>org.eclipse.persistence</groupId>
+          <artifactId>eclipselink</artifactId>
+          <version>2.5.0</version>
+      </dependency>
+
 
   </dependencies>
   <build>
