--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
       <dependency>
           <groupId>org.apache.derby</groupId>
           <artifactId>derbyclient</artifactId>
-          <version>10.13.1.1</version>
+          <version>10.12.1.1</version>
       </dependency>
 
       <!-- https://mvnrepository.com/artifact/org.eclipse.persistence/eclipselink -->
@@ -87,6 +87,21 @@
           <artifactId>eclipselink</artifactId>
           <version>2.5.0</version>
       </dependency>
+
+      <!-- https://mvnrepository.com/artifact/org.hibernate.javax.persistence/hibernate-jpa-2.0-api -->
+      <dependency>
+          <groupId>org.hibernate.javax.persistence</groupId>
+          <artifactId>hibernate-jpa-2.0-api</artifactId>
+          <version>1.0.1.Final</version>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager -->
+      <dependency>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate-entitymanager</artifactId>
+          <version>3.3.2.GA</version>
+      </dependency>
+
 
 
   </dependencies>
