--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,12 @@
           <version>3.3.2.GA</version>
       </dependency>
 
+
+      <dependency>
+          <groupId>org.eclipse.persistence</groupId>
+          <artifactId>org.eclipse.persistence.moxy</artifactId>
+          <version>2.6.0</version>
+      </dependency>
   </dependencies>
   <build>
     <finalName>DistributedApp</finalName>
