Gonna push this real quick. api/messages/db works.  /all throws exception

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,22 +15,17 @@
        </init-param>
        <init-param>
            <param-name>jersey.config.server.provider.packages</param-name>
-           <param-value>org.rob.rest; org.rob.config</param-value>
+           <param-value>org.rob.config</param-value>
        </init-param>
-       <init-param>
-           <param-name>com.sun.jersey.spi.container.ContainerRequestFilters</param-name>
-           <param-value>org.rob.service.BasicAuthFilter</param-value>
-       </init-param>
-
        <load-on-startup>1</load-on-startup>
    </servlet>
+
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
-
-    <servlet-mapping>
+   <servlet-mapping>
     <servlet-name>Jersey Web Application</servlet-name>
     <url-pattern>/rest/*</url-pattern>
   </servlet-mapping>
@@ -38,5 +33,4 @@
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
-
 </web-app>
