--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
       <dependency>
           <groupId>org.eclipse.persistence</groupId>
           <artifactId>eclipselink</artifactId>
-          <version>2.5.0</version>
+          <version>2.6.1</version>
       </dependency>
 
       <!-- https://mvnrepository.com/artifact/org.hibernate.javax.persistence/hibernate-jpa-2.0-api -->
@@ -108,6 +108,14 @@
           <artifactId>org.eclipse.persistence.moxy</artifactId>
           <version>2.6.0</version>
       </dependency>
+
+      <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.module/jackson-module-jaxb-annotations -->
+      <dependency>
+          <groupId>com.fasterxml.jackson.module</groupId>
+          <artifactId>jackson-module-jaxb-annotations</artifactId>
+          <version>2.5.1</version>
+      </dependency>
+
   </dependencies>
   <build>
     <finalName>DistributedApp</finalName>
